--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,80 +7,95 @@
         android:id="@+id/contact_name_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/buttons_call_container"
-        android:textSize="24sp"
-        android:layout_margin="8dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="8dp"
+        android:textSize="24sp" />
 
     <LinearLayout
-           android:id="@+id/buttons_call_container"
-           android:orientation="horizontal"
-           android:layout_above="@+id/capture_format_text_call"
-           android:layout_alignWithParentIfMissing="true"
-           android:layout_marginBottom="32dp"
-           android:layout_centerHorizontal="true"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content">
-
-       <ImageButton
-           android:id="@+id/button_call_disconnect"
-           android:background="@drawable/disconnect"
-           android:contentDescription="@string/disconnect_call"
-           android:layout_marginEnd="16dp"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
-
-       <ImageButton
-           android:id="@+id/button_call_switch_camera"
-           android:background="@android:drawable/ic_menu_camera"
-           android:contentDescription="@string/switch_camera"
-           android:layout_marginEnd="8dp"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
+        android:id="@+id/buttons_call_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_above="@+id/capture_format_text_call"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
+        android:orientation="horizontal">
 
         <ImageButton
-           android:id="@+id/button_call_scaling_mode"
-           android:background="@drawable/ic_action_return_from_full_screen"
-           android:contentDescription="@string/disconnect_call"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
+            android:id="@+id/button_call_disconnect"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/disconnect"
+            android:contentDescription="@string/disconnect_call" />
 
-       <ImageButton
-           android:id="@+id/button_call_toggle_mic"
-           android:background="@android:drawable/ic_btn_speak_now"
-           android:contentDescription="@string/toggle_mic"
-           android:layout_marginEnd="8dp"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
+        <ImageButton
+            android:id="@+id/button_call_switch_camera"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="8dp"
+            android:background="@android:drawable/ic_menu_camera"
+            android:contentDescription="@string/switch_camera" />
+
+        <ImageButton
+            android:id="@+id/button_call_scaling_mode"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/ic_action_return_from_full_screen"
+            android:contentDescription="@string/disconnect_call" />
+
+        <ImageButton
+            android:id="@+id/button_call_toggle_mic"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="8dp"
+            android:background="@android:drawable/ic_btn_speak_now"
+            android:contentDescription="@string/toggle_mic" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/capture_format_text_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/capture_format_slider_call"
-        android:textSize="16sp"
-        android:text="@string/capture_format_change_text"/>
+        android:layout_centerHorizontal="true"
+        android:text="@string/capture_format_change_text"
+        android:textSize="16sp" />
 
     <SeekBar
         android:id="@+id/capture_format_slider_call"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/chat_panel"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/chat_area"
-        android:progress="50"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:progress="50" />
 
-    <EditText
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/chat_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/chat_area"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_chat_here"
+            android:layout_weight="1"
             android:ems="10"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="8dp"
-            android:imeOptions="actionDone"
-            android:id="@+id/chat_area"/>
+            android:hint="@string/hint_chat_here"
+            android:imeOptions="actionDone" />
+
+        <Button
+            android:id="@+id/chat_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send" />
+    </LinearLayout>
+
 
 </RelativeLayout>
